<resources>
    <string name="app_name">Food Project</string>



    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="restaurant">Restaurantes</string>
    <string name="category">Cozinhas</string>
    <string name="favorites">Restaurantes Favoritos</string>
    <string name="favorite_food">Pratos Favoritos</string>
    <string name="wizzard">Tutorial</string>
    <string name="exit">Sair</string>
</resources>
