<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/grp_1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_restaurant"
            android:title="@string/restaurant"
            android:icon="@drawable/ic_location"/>
        <item
            android:id="@+id/nav_category"
            android:title="@string/category"
            android:icon="@drawable/ic_location"/>
        <item
            android:id="@+id/nav_favorite_restaurant"
            android:title="@string/favorites"
            android:icon="@drawable/ic_location"/>
        <item
            android:id="@+id/nav_favorite_food"
            android:title="@string/favorite_food"
            android:icon="@drawable/ic_location"/>
    </group>
    <group
        android:id="@+id/grp_2"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_wizzard"
            android:title="@string/wizzard"
            android:icon="@drawable/ic_location"/>
        <item
            android:id="@+id/nav_exit"
            android:title="@string/exit"
            android:icon="@drawable/ic_location"/>
    </group>

</menu>
